--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^8.13.1",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "resend": "^4.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
